# Maily360

./: .gitignore  CHANGELOG.md  package-lock.json
MailySoft/backend/: .env.example  Dockerfile  conftest.py  entrypoint.sh  manage.py  pyproject.toml
MailySoft/backend/adapters/: __init__.py  cfdi.py  whatsapp.py
MailySoft/backend/apps/agenda/: admin.py  appointment_types.py  apps.py  blocks.py  models.py  notes.py  reminders.py  selectors.py  serializers.py  series.py  services.py  tasks.py  urls.py  views.py
MailySoft/backend/apps/audit/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
MailySoft/backend/apps/authn/: admin.py  apps.py  managers.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
MailySoft/backend/apps/clinica/: apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  sucursal_scope.py  urls.py  views.py
MailySoft/backend/apps/core/: apps.py  files.py  managers.py  middleware.py  models.py  permissions.py  tenant_context.py  views.py
MailySoft/backend/apps/expediente/: apps.py  models.py  pdf.py  pdf_jobs.py  selectors.py  serializers.py  services.py  services_calendarizacion.py  services_catalogos.py  services_plan_integral.py  services_resumen.py  urls.py  validators.py  views.py  views_alergias.py  views_calendarizacion.py  views_catalogos.py  views_evoluciones.py  views_historia.py  views_imagenes.py  views_libro.py  views_plan_integral.py  views_preguntas.py  views_resumen.py  views_signos.py
MailySoft/backend/apps/finanzas/: admin.py  apps.py  cache.py  models.py  pdf.py  pdf_jobs.py  retention.py  selectors.py  serializers.py  services.py  urls.py  views.py
MailySoft/backend/apps/notas/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
MailySoft/backend/apps/notificaciones/: admin.py  apps.py  models.py  recipients.py  selectors.py  serializers.py  services.py  urls.py  views.py
MailySoft/backend/apps/pacientes/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
MailySoft/backend/apps/pdfs/: __init__.py  apps.py  models.py  registry.py  selectors.py  services.py  tasks.py  urls.py  views.py
MailySoft/backend/apps/personal/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
MailySoft/backend/apps/plataforma/: apps.py  selectors.py  serializers.py  services.py  system_health.py  tasks.py  urls.py  views.py
MailySoft/backend/config/: asgi.py  celery.py  urls.py  wsgi.py
MailySoft/backend/tests/: conftest.py  factories.py
MailySoft/backend/workers/: __init__.py
(+679 files in other folders)
