[tool.poetry]
name = "mailysoft-backend"
version = "0.1.0"
description = "Maily Soft — plataforma SaaS de gestión clínica multi-tenant"
authors = ["Maily Team"]
readme = "README.md"
packages = [{ include = "config" }, { include = "apps" }, { include = "adapters" }, { include = "workers" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
Django = "^5.1"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
django-environ = "^0.11"
django-cors-headers = "^4.4"
psycopg = { version = "^3.2", extras = ["binary"] }
celery = { version = "^5.4", extras = ["redis"] }
redis = "^5.0"
django-redis = "^5.4"
channels = "^4.0"
channels-redis = "^4.2"
drf-spectacular = "^0.27"
gunicorn = "^22.0"
whitenoise = "^6.7"
Pillow = "^10.4"
boto3 = "^1.35"
django-storages = { version = "^1.14", extras = ["s3"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-django = "^4.9"
pytest-cov = "^5.0"
factory-boy = "^3.3"
freezegun = "^1.5"
mypy = "^1.11"
django-stubs = { version = "^5.1", extras = ["compatible-mypy"] }
djangorestframework-stubs = "^3.15"
black = "^24.8"
ruff = "^0.6"
pre-commit = "^3.8"
pip-audit = "^2.7"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]
ignore = [
    "S101",  # use of assert in tests is fine
    "B008",  # function calls in default args (DRF uses this pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]
"**/migrations/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.mypy_django_plugin]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=apps",
    "--cov=adapters",
    "--cov=workers",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
